# simulacionsismos

./: .gitignore  CMakeLists.txt  README.md  config.json  visualize.py
src/: main.cpp
